objects/Family_Price_Adjustment__c/Family_Price_Adjustment__c.object-meta.xml
<CustomObject>
    <label>Family Price Adjustment</label>
    <nameField>
        <displayFormat>FPA-{0000000}</displayFormat>
        <label>Family Price Adjustment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Family Price Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>