objects/Family_Price_Adjustment__c/fields/Created_at__c.field-meta.xml
<CustomField>
    <fullName>Created_at__c</fullName>
    <label>Created at</label>
    <type>Time</type>
</CustomField>