objects/Family_Price_Adjustment__c/fields/Updated_at__c.field-meta.xml
<CustomField>
    <fullName>Updated_at__c</fullName>
    <label>Updated at</label>
    <type>Time</type>
</CustomField>