objects/Family_Price_Adjustment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Family__c</columns>
    <columns>Family_Adjustment__c</columns>
    <columns>State__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>